<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/layoutRespuesta"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/textView" />




    <EditText
        android:id="@+id/respuestaLicoreria"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/layoutRespuestaHint"
        android:digits="@string/digitos2"
        android:padding="10dp" />
</LinearLayout>