<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tituloConsultarDuenio"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/textView" />


    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimary"
            android:text="Nombre:"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="Nombre"
            android:digits="@string/digitos"
            android:id="@+id/nombreConsul"
            android:layout_weight="3"/>
    </LinearLayout>


    <EditText
        android:id="@+id/consulta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxLines="5"
        android:hint="@string/hint"
        android:digits="@string/digitos2"
        android:padding="10dp" />
</LinearLayout>