<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


   <android.support.v7.widget.CardView
       android:layout_width="160dp"
       android:layout_height="190dp"
       android:background="@color/colorPrimaryDark"
       android:layout_margin="10dp">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@color/colorPrimaryDark"
           android:orientation="vertical"
           android:gravity="center">

           <ImageView
               android:layout_width="64dp"
               android:layout_height="64dp"
               android:background="@drawable/circlebackground"
               android:src="@drawable/ic_fingerprint_white_24dp"
               android:id="@+id/registroLicorerias"
               android:padding="5dp"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textStyle="bold"
               android:layout_marginTop="2dp"
               android:text="@string/registroLicoreria"
               android:textColor="@color/texto"
               android:textAlignment="center"/>

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@color/textoSegundo"
               android:layout_marginTop="10dp"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:padding="5dp"
               android:textColor="@color/texto"
               android:textStyle="bold"
               android:text="@string/registroLicoreriaExp"/>

       </LinearLayout>

   </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="160dp"
        android:layout_height="190dp"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/circlebackground"
                android:src="@drawable/ic_search_white_24dp"
                android:id="@+id/buscarLicorerias"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:text="@string/buscarLicorerias"
                android:textColor="@color/texto"
                android:textAlignment="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textoSegundo"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/texto"
                android:textStyle="bold"
                android:text="@string/buscarLicoreriasExp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>